fux endpoints and swagger
