# swagger_output.json
@@ -17,7 +17,6 @@
           "Hello"
         ],
         "description": "",
-        "parameters": [],
         "responses": {
           "200": {
             "description": "OK"
@@ -31,7 +30,6 @@
           "Users"
         ],
         "description": "",
-        "parameters": [],
         "responses": {
           "200": {
             "description": "OK"
@@ -64,6 +62,12 @@
                 },
                 "password": {
                   "example": "any"
+                },
+                "sex": {
+                  "example": "any"
+                },
+                "isAdult": {
+                  "example": "any"
                 }
               }
             }
@@ -90,6 +94,9 @@
             "schema": {
               "type": "object",
               "properties": {
+                "id": {
+                  "example": "any"
+                },
                 "firstName": {
                   "example": "any"
                 },
@@ -100,6 +107,12 @@
                   "example": "any"
                 },
                 "password": {
+                  "example": "any"
+                },
+                "sex": {
+                  "example": "any"
+                },
+                "isAdult": {
                   "example": "any"
                 }
               }
@@ -119,7 +132,7 @@
         }
       }
     },
-    "/users/{email}": {
+    "/users/{id}": {
       "get": {
         "tags": [
           "Users"
@@ -127,7 +140,7 @@
         "description": "",
         "parameters": [
           {
-            "name": "email",
+            "name": "id",
             "in": "path",
             "required": true,
             "type": "string"
@@ -136,6 +149,9 @@
         "responses": {
           "200": {
             "description": "OK"
+          },
+          "404": {
+            "description": "Not Found"
           }
         }
       },
@@ -146,7 +162,7 @@
         "description": "",
         "parameters": [
           {
-            "name": "email",
+            "name": "id",
             "in": "path",
             "required": true,
             "type": "string"
@@ -171,7 +187,7 @@
         "description": "",
         "parameters": [
           {
-            "name": "email",
+            "name": "id",
             "in": "path",
             "required": true,
             "type": "string"
@@ -188,7 +204,16 @@
                 "lastName": {
                   "example": "any"
                 },
+                "email": {
+                  "example": "any"
+                },
                 "password": {
+                  "example": "any"
+                },
+                "sex": {
+                  "example": "any"
+                },
+                "isAdult": {
                   "example": "any"
                 }
               }
